--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>Topics</h2>
             <button class="expand-all" onclick="toggleAllSections()">Expand All</button>
             <div class="section">
-                <button class="collapsible">Access Management</button>
+                <button class="collapsible">1. Access Management</button>
                 <div class="content">
                     <a href="./topics/IAM.html" id="IAM">IAM</a>
                     <a href="./topics/Access Management.html" data-topic="aws-ad">AWS AD</a>
@@ -30,31 +30,31 @@
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Command Line Interfaces</button>
+                <button class="collapsible">2. Command Line Interfaces</button>
                 <div class="content">
                     <a href="./topics/Command line interface/cli.html" data-topic="cli">CLI</a>
                     <a href="./topics/Command line interface//clouldshell.html" data-topic="cloudshell">CloudShell</a>
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Compute Services</button>
+                <button class="collapsible">3. Compute Services</button>
                 <div class="content">
                     <a href="./topics/compute science/ec2.html" data-topic="iam">EC2</a>
                     <a href="./topics/compute science/AMI.html" data-topic="aws-ad">AMI</a>
-                    <a href="#" data-topic="aws-organizations">App Runner</a>
-                    <a href="#" data-topic="cognito">Batch</a>
-                    <a href="#" data-topic="connect">ECS (Elastic Container Service)</a>
-                    <a href="#" data-topic="control-tower">EKS (Elastic Kubernetes Service)</a>
-                    <a href="#" data-topic="identity-center">Elastic Beanstalk</a>
-                    <a href="#" data-topic="systems-manager">Lambda</a>
-                    <a href="#" data-topic="systems-manager">Proton</a>
+                    <a href="./topics/compute science/app runner.html" data-topic="aws-organizations">App Runner</a>
+                    <a href="./topics/compute science/batch.html" data-topic="cognito">Batch</a>
+                    <a href="./topics/compute science/ECS (Elastic Container Service).html" data-topic="connect">ECS (Elastic Container Service)</a>
+                    <a href="./topics/compute science/EKS (Elastic Kubernetes Service).html" data-topic="control-tower">EKS (Elastic Kubernetes Service)</a>
+                    <a href="./topics/compute science/Elastic Beanstalk.html" data-topic="identity-center">Elastic Beanstalk</a>
+                    <a href="./topics/compute science/Lambda.html" data-topic="systems-manager">Lambda</a>
+                    <a href="./topics/compute science/Proton.html" data-topic="systems-manager">Proton</a>
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Cost Management</button>
+                <button class="collapsible">4. Cost Management</button>
                 <div class="content">
-                    <a href="#" data-topic="aws-ad">AWS Billing</a>
-                    <a href="#" data-topic="aws-organizations">Compute Optimizer</a>
+                    <a href="./topics/Cost Management/AWS Billing.html" data-topic="aws-ad">AWS Billing</a>
+                    <a href="./topics/Cost Management/Compute Optimizer.html" data-topic="aws-organizations">Compute Optimizer</a>
                     <a href="#" data-topic="cognito">Cost Allocation Tags</a>
                     <a href="#" data-topic="connect">Cost Explorer</a>
                     <a href="#" data-topic="control-tower">Savings Plans</a>
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Data Transfer</button>
+                <button class="collapsible">5. Data Transfer</button>
                 <div class="content">
                     <a href="#" data-topic="iam">App Flow</a>
                     <a href="#" data-topic="aws-ad">Direct Connect</a>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Data Migration</button>
+                <button class="collapsible">6. Data Migration</button>
                 <div class="content">
                     <a href="#" data-topic="iam">Comprehend</a>
                     <a href="#" data-topic="aws-ad">Forecast</a>
@@ -88,9 +88,9 @@
                     <a href="#" data-topic="identity-center">Transcribe</a>
                     <a href="#" data-topic="systems-manager">Translate</a>
                 </div>
-            </div> 
+            </div>
             <div class="section">
-                <button class="collapsible">Messaging</button>
+                <button class="collapsible">7. Messaging</button>
                 <div class="content">
                     <a href="#" data-topic="iam">EventBridge</a>
                     <a href="#" data-topic="aws-ad">Kinesis</a>
@@ -101,11 +101,10 @@
                     <a href="#" data-topic="identity-center">SNS</a>
                     <a href="#" data-topic="systems-manager">SQS</a>
                     <a href="#" data-topic="systems-manager">Simple Workflow</a>
-
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Networking</button>
+                <button class="collapsible">8. Networking</button>
                 <div class="content">
                     <a href="#" data-topic="iam">AWS Global Accelerator</a>
                     <a href="#" data-topic="aws-ad">NAT</a>
@@ -114,7 +113,7 @@
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Scalability</button>
+                <button class="collapsible">9. Scalability</button>
                 <div class="content">
                     <a href="#" data-topic="iam">API Gateway</a>
                     <a href="#" data-topic="aws-ad">ASG (Auto Scaling Groups)</a>
@@ -123,7 +122,7 @@
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Security</button>
+                <button class="collapsible">10. Security</button>
                 <div class="content">
                     <a href="#" data-topic="iam">AWS Certificate Manager</a>
                     <a href="#" data-topic="aws-ad">AWS Shield</a>
@@ -142,53 +141,27 @@
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Storage</button>
+                <button class="collapsible">11. Storage</button>
                 <div class="content">
                     <a href="#" data-topic="iam">Aurora</a>
                     <a href="#" data-topic="aws-ad">DocumentDB</a>
                     <a href="#" data-topic="aws-organizations">DynamoDB</a>
-                    <a href="#" data-topic="cognito">EBS (Elastic Block Store)</a>
-                    <a href="#" data-topic="connect">EFS (Elastic File System)</a>
-                    <a href="#" data-topic="control-tower">ElastiCache</a>
-                    <a href="#" data-topic="identity-center">Amazon FSx for Lustre</a>
-                    <a href="#" data-topic="systems-manager">Amazon FSx for Windows File Server</a>
-                    <a href="#" data-topic="iam">EC2 Instance Store</a>
-                    <a href="#" data-topic="aws-ad">DocumentDB</a>
-                    <a href="#" data-topic="iam">Lake Formation</a>
-                    <a href="#" data-topic="aws-ad">OpenSearch</a>
-                    <a href="#" data-topic="iam">Quantum Ledger Database</a>
-                    <a href="#" data-topic="aws-ad">RDS (Relational Database Service)</a>
-                    <a href="#" data-topic="iam">Redis</a>
-                    <a href="#" data-topic="aws-ad">Amazon Redshift</a>
-                    <a href="#" data-topic="iam">S3 (Simple Storage Service)</a>
-                    <a href="#" data-topic="aws-ad">Timestream</a>
-                </div>
-            </div>
-            <div class="section">
-                <button class="collapsible">Utilities</button>
-                <div class="content">
-                    <a href="#" data-topic="iam">AWS Certificate Manager</a>
-                    <a href="#" data-topic="aws-ad">AWS Config</a>
-                    <a href="#" data-topic="aws-organizations">Athena</a>
-                    <a href="#" data-topic="cognito">Backup</a>
-                    <a href="#" data-topic="connect">CloudTrail</a>
-                    <a href="#" data-topic="control-tower">CloudWatch</a>
-                    <a href="#" data-topic="identity-center">CloudFront</a>
-                    <a href="#" data-topic="systems-manager">Elastic MapReduce (EMR)</a>
-                    <a href="#" data-topic="systems-manager">AWS Glue</a>
-                </div>
-        </div>
-            <div class="section">
-                <button class="collapsible">On-Premise Options</button>
-                <div class="content">
-                    <a href="#" data-topic="iam">Well-Architected Framework</a>
-                    <a href="#" data-topic="cognito">Pillars</a>
-                    <a href="#" data-topic="connect">Principles</a>
+                    <a href="#" data-topic="cognito">ElastiCache</a>
+                    <a href="#" data-topic="connect">FSx</a>
+                    <a href="#" data-topic="control-tower">RDS (Relational Database Service)</a>
+                    <a href="#" data-topic="identity-center">Redshift</a>
+                    <a href="#" data-topic="systems-manager">S3 (Simple Storage Service)</a>
+                    <a href="#" data-topic="connect">S3 Glacier</a>
+                    <a href="#" data-topic="connect">Storage Gateway</a>
                 </div>
             </div>
         </div>
+
+
         <div class="middle-panel" id="content-panel">
-            <p>Select a topic to see the content.</p>
+            <p>AWS Architecture.</p>
+        <img src="https://d2908q01vomqb2.cloudfront.net/fc074d501302eb2b93e2554793fcaf50b3bf7291/2023/02/16/How-an-architecture-can-be-designed-with-AWS-Application-Composer.png" alt="AWS Proton Architecture Diagram">
+            
         </div>
 
         <!-- <div class="right-panel">
