--- a/topics/aws organizations.html
+++ b/topics/aws organizations.html
@@ -12,7 +12,9 @@
             background-color: #fff;
             color: #333;
         }
-
+        h1 {
+            color: #f4f4f4;
+        }
         h2 {
             color: #FFA500; /* Orange color for headings */
         }
