--- a/topics/IAM.html
+++ b/topics/IAM.html
@@ -11,10 +11,10 @@
             background-color: #f4f4f4;
             color: #333;
             margin: 0;
+        }  h1, h2 {
+            color: #333;
         }
-        h1 {
-            color: #FFA500;
-        }
+
         h2 {
             color: #333;
             margin-top: 20px;
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <h1>AWS IAM - Certified Solutions Architect Exam Guide</h1>
+    <h2>AWS IAM - Certified Solutions Architect Exam Guide</h2>
     
     <h2>Key IAM Concepts for the Exam</h2>
     
