--- a/topics/identity center.html
+++ b/topics/identity center.html
@@ -12,8 +12,8 @@
             color: #333;
             margin: 0;
         }
-        h1 {
-            color: #FFA500;
+        h1, h2 {
+            color: #333;
         }
         h2 {
             color: #333;
