styles Updated for dark theme

--- a/topics/Command line interface/cli.html
+++ b/topics/Command line interface/cli.html
@@ -13,7 +13,7 @@
             margin: 0;
         }
         h1 {
-            color: #FFA500;
+            color: #f4f4f4;
         }
         h2 {
             color: #333;
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <h1>AWS CLI - Certified Solutions Architect Exam Guide</h1>
+    <h2>AWS CLI - Certified Solutions Architect Exam Guide</h2>
 
     <h2>Overview of AWS CLI</h2>
     <p>The AWS Command Line Interface (CLI) is a unified tool that provides a consistent interface for interacting with AWS services from the command line. It allows developers and system administrators to manage their AWS resources and automate workflows using simple commands.</p>
