--- a/topics/Command line interface/clouldshell.html
+++ b/topics/Command line interface/clouldshell.html
@@ -13,7 +13,7 @@
             margin: 0;
         }
         h1 {
-            color: #FFA500;
+            color: #f4f4f4;
         }
         h2 {
             color: #333;
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <h1>AWS CloudShell - Certified Solutions Architect Exam Guide</h1>
+    <h2>AWS CloudShell - Certified Solutions Architect Exam Guide</h2>
 
     <h2>Overview of AWS CloudShell</h2>
     <p>AWS CloudShell is a browser-based shell that provides a pre-configured environment for managing AWS resources. It offers a command-line interface (CLI) for interacting with AWS services and is integrated with AWS Management Console. CloudShell simplifies tasks by providing an easy-to-use interface directly within the browser, without requiring any additional setup or configuration.</p>
