styles Updated for dark theme

--- a/topics/compute science/AMI.html
+++ b/topics/compute science/AMI.html
@@ -14,7 +14,7 @@
 
         }
         h1 {
-            color: #FFA500;
+            color: #f4f4f4;
         }
         h2 {
             color: #333;
@@ -42,7 +42,7 @@
     </style>
 </head>
 <body>
-    <h1>AWS AMI Information - Certified Solutions Architect Exam Guide</h1>
+    <h2>AWS AMI Information - Certified Solutions Architect Exam Guide</h2>
 
     <h2>Overview of Amazon Machine Images (AMIs)</h2>
     <p>Amazon Machine Images (AMIs) are pre-configured templates used to create and launch Amazon EC2 instances. An AMI includes the operating system, application server, applications, and other configurations required to launch an instance. AMIs can be created from existing EC2 instances or can be obtained from the AWS Marketplace.</p>
