styles Updated for dark theme

--- a/topics/compute science/app runner.html
+++ b/topics/compute science/app runner.html
@@ -13,7 +13,7 @@
             margin: 0;
         }
         h1 {
-            color: #FFA500;
+            color: #f4f4f4;
         }
         h2 {
             color: #333;
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1>AWS App Runner Information - Certified Solutions Architect Exam Guide</h1>
+    <h2>AWS App Runner Information - Certified Solutions Architect Exam Guide</h2>
 
     <h2>Overview of AWS App Runner</h2>
     <p>AWS App Runner is a fully managed service that makes it easy for developers to quickly deploy containerized applications from source code or container images. It abstracts away the infrastructure management tasks, such as scaling, load balancing, and monitoring, allowing developers to focus on building their applications.</p>
