styles Updated for dark theme

--- a/topics/compute science/ec2.html
+++ b/topics/compute science/ec2.html
@@ -12,8 +12,16 @@
             color: #333;
             margin: 0;
         }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
         h1 {
-            color: #FFA500;
+            color: #f4f4f4;
         }
         h2 {
             color: #333;
@@ -41,7 +49,8 @@
     </style>
 </head>
 <body>
-    <h1>AWS EC2 - Certified Solutions Architect Exam Guide</h1>
+    <div class="container">
+    <h2>AWS EC2 - Certified Solutions Architect Exam Guide</h2>
 
     <h2>Overview of AWS EC2</h2>
     <p>Amazon Elastic Compute Cloud (EC2) is a core AWS service that provides scalable computing capacity in the cloud. It allows users to launch and manage virtual servers, known as instances, in the AWS cloud. EC2 offers flexibility in choosing the right instance type for your workload, including the ability to scale up or down based on demand.</p>
@@ -108,5 +117,6 @@
         <li>Know how to configure security groups and network settings for your instances.</li>
         <li>Practice using AWS EC2 for different scenarios, including launching, managing, and terminating instances.</li>
     </ul>
+    </div>
 </body>
 </html>
