--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
                 <div class="content">
                     <a href="./topics/Cost Management/AWS Billing.html" data-topic="aws-ad">AWS Billing</a>
                     <a href="./topics/Cost Management/Compute Optimizer.html" data-topic="aws-organizations">Compute Optimizer</a>
-                    <a href="#" data-topic="cognito">Cost Allocation Tags</a>
-                    <a href="#" data-topic="connect">Cost Explorer</a>
-                    <a href="#" data-topic="control-tower">Savings Plans</a>
-                    <a href="#" data-topic="identity-center">Trusted Advisor</a>
+                    <a href="./topics/Cost Management/Cost Allocation Tags.html" data-topic="cognito">Cost Allocation Tags</a>
+                    <a href="./topics/Cost Management/Cost Explorer.html" data-topic="connect">Cost Explorer</a>
+                    <a href="./topics/Cost Management/Savings Plans.html" data-topic="control-tower">Savings Plans</a>
+                    <a href="./topics/Cost Management/Trusted Advisor.html" data-topic="identity-center">Trusted Advisor</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">5. Data Transfer</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">App Flow</a>
-                    <a href="#" data-topic="aws-ad">Direct Connect</a>
-                    <a href="#" data-topic="aws-organizations">Storage Gateway</a>
-                    <a href="#" data-topic="cognito">Transfer</a>
-                    <a href="#" data-topic="connect">VPN</a>
-                    <a href="#" data-topic="control-tower">Virtual Interfaces</a>
+                    <a href="./topics/5.Data Transfer/App Flow.html" data-topic="iam">App Flow</a>
+                    <a href="./topics/5.Data Transfer/Direct Connect.html" data-topic="aws-ad">Direct Connect</a>
+                    <a href="./topics/5.Data Transfer/Storage Gateway.html" data-topic="aws-organizations">Storage Gateway</a>
+                    <a href="./topics/5.Data Transfer/Transfer.html" data-topic="cognito">Transfer</a>
+                    <a href="./topics/5.Data Transfer/VPN.html" data-topic="connect">VPN</a>
+                    <a href="./topics/5.Data Transfer/Virtual Interfaces.html" data-topic="control-tower">Virtual Interfaces</a>
                 </div>
             </div>
             <div class="section">
