Content path Updated

--- a/index.html
+++ b/index.html
@@ -75,28 +75,28 @@
             <div class="section">
                 <button class="collapsible">6. Data Migration</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">Comprehend</a>
-                    <a href="#" data-topic="aws-ad">Forecast</a>
-                    <a href="#" data-topic="aws-organizations">Kendra</a>
-                    <a href="#" data-topic="cognito">Lex</a>
-                    <a href="#" data-topic="connect">Personalize</a>
-                    <a href="#" data-topic="control-tower">Polly</a>
-                    <a href="#" data-topic="identity-center">QuickSight</a>
-                    <a href="#" data-topic="systems-manager">Recognition</a>
-                    <a href="#" data-topic="connect">SageMaker</a>
-                    <a href="#" data-topic="control-tower">Textract</a>
-                    <a href="#" data-topic="identity-center">Transcribe</a>
-                    <a href="#" data-topic="systems-manager">Translate</a>
+                    <a href="./topics/6. Data Migration/Comprehend.html" data-topic="iam">Comprehend</a>
+                    <a href="./topics/6. Data Migration/Forecast.html" data-topic="aws-ad">Forecast</a>
+                    <a href="./topics/6. Data Migration/Kendra.html" data-topic="aws-organizations">Kendra</a>
+                    <a href="./topics/6. Data Migration/LEX.html" data-topic="cognito">Lex</a>
+                    <a href="./topics/6. Data Migration/Personalize.html" data-topic="connect">Personalize</a>
+                    <a href="./topics/6. Data Migration/Polly.html" data-topic="control-tower">Polly</a>
+                    <a href="./topics/6. Data Migration/QuickSight.html" data-topic="identity-center">QuickSight</a>
+                    <a href="./topics/6. Data Migration/Recognition.html" data-topic="systems-manager">Rekognition</a>
+                    <a href="./topics/6. Data Migration/SageMaker.html" data-topic="connect">SageMaker</a>
+                    <a href="./topics/6. Data Migration/Textract.html" data-topic="control-tower">Textract</a>
+                    <a href="./topics/6. Data Migration/Transcribe.html" data-topic="identity-center">Transcribe</a>
+                    <a href="./topics/6. Data Migration/Translate.html" data-topic="systems-manager">Translate</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">7. Messaging</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">EventBridge</a>
-                    <a href="#" data-topic="aws-ad">Kinesis</a>
-                    <a href="#" data-topic="aws-organizations">Message Queues</a>
-                    <a href="#" data-topic="cognito">Amazon Managed Streaming</a>
-                    <a href="#" data-topic="connect">Amazon Pinpoint</a>
+                    <a href="./topics/7. Messaging/EventBridge.html" data-topic="iam">EventBridge</a>
+                    <a href="./topics/7. Messaging/Kinesis.html" data-topic="aws-ad">Kinesis</a>
+                    <a href="./topics/7. Messaging/Message Queues.html" data-topic="aws-organizations">Message Queues</a>
+                    <a href="./topics/7. Messaging/Amazon Managed Streaming.html" data-topic="cognito">Amazon Managed Streaming</a>
+                    <a href="./topics/7. Messaging/Amazon Pinpoint.html" data-topic="connect">Amazon Pinpoint</a>
                     <a href="#" data-topic="control-tower">Simple Email Service</a>
                     <a href="#" data-topic="identity-center">SNS</a>
                     <a href="#" data-topic="systems-manager">SQS</a>
