Simple Email Service path updated

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <a href="./topics/7. Messaging/Message Queues.html" data-topic="aws-organizations">Message Queues</a>
                     <a href="./topics/7. Messaging/Amazon Managed Streaming.html" data-topic="cognito">Amazon Managed Streaming</a>
                     <a href="./topics/7. Messaging/Amazon Pinpoint.html" data-topic="connect">Amazon Pinpoint</a>
-                    <a href="#" data-topic="control-tower">Simple Email Service</a>
+                    <a href="./topics/7. Messaging/Simple Email Service.html" data-topic="control-tower">Simple Email Service</a>
                     <a href="#" data-topic="identity-center">SNS</a>
                     <a href="#" data-topic="systems-manager">SQS</a>
                     <a href="#" data-topic="systems-manager">Simple Workflow</a>
