--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
             <div class="section">
                 <button class="collapsible">8. Networking</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">AWS Global Accelerator</a>
-                    <a href="#" data-topic="aws-ad">NAT</a>
-                    <a href="#" data-topic="aws-organizations">Route 53</a>
-                    <a href="#" data-topic="cognito">VPC</a>
+                    <a href="./topics/8. Networking/AWS Global Accelerator.html" data-topic="iam">AWS Global Accelerator</a>
+                    <a href="./topics/8. Networking/NAT.html" data-topic="aws-ad">NAT</a>
+                    <a href="./topics/8. Networking/route 53.html" data-topic="aws-organizations">Route 53</a>
+                    <a href="./topics/8. Networking/VPC.html" data-topic="cognito">VPC</a>
                 </div>
             </div>
             <div class="section">
