--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="section">
                 <button class="collapsible">9. Scalability</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">API Gateway</a>
+                    <a href="./topics/9. Saclability/API Gateway.html" data-topic="iam">API Gateway</a>
                     <a href="#" data-topic="aws-ad">ASG (Auto Scaling Groups)</a>
                     <a href="#" data-topic="aws-organizations">ELB (Elastic Load Balancer)</a>
                     <a href="#" data-topic="cognito">Step Functions</a>
