--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <button class="collapsible">9. Scalability</button>
                 <div class="content">
                     <a href="./topics/9. Saclability/API Gateway.html" data-topic="iam">API Gateway</a>
-                    <a href="#" data-topic="aws-ad">ASG (Auto Scaling Groups)</a>
+                    <a href="./topics/9. Saclability/ASG (Auto Scaling Groups).html" data-topic="aws-ad">ASG (Auto Scaling Groups)</a>
                     <a href="#" data-topic="aws-organizations">ELB (Elastic Load Balancer)</a>
                     <a href="#" data-topic="cognito">Step Functions</a>
                 </div>
