--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="content">
                     <a href="./topics/9. Saclability/API Gateway.html" data-topic="iam">API Gateway</a>
                     <a href="./topics/9. Saclability/ASG (Auto Scaling Groups).html" data-topic="aws-ad">ASG (Auto Scaling Groups)</a>
-                    <a href="#" data-topic="aws-organizations">ELB (Elastic Load Balancer)</a>
+                    <a href="./topics/9. Saclability/ELB (Elastic Load Balancer).html" data-topic="aws-organizations">ELB (Elastic Load Balancer)</a>
                     <a href="#" data-topic="cognito">Step Functions</a>
                 </div>
             </div>
