step functions updated

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <a href="./topics/9. Saclability/API Gateway.html" data-topic="iam">API Gateway</a>
                     <a href="./topics/9. Saclability/ASG (Auto Scaling Groups).html" data-topic="aws-ad">ASG (Auto Scaling Groups)</a>
                     <a href="./topics/9. Saclability/ELB (Elastic Load Balancer).html" data-topic="aws-organizations">ELB (Elastic Load Balancer)</a>
-                    <a href="#" data-topic="cognito">Step Functions</a>
+                    <a href="./topics/9. Saclability/Step Functions.html" data-topic="cognito">Step Functions</a>
                 </div>
             </div>
             <div class="section">
