--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="section">
                 <button class="collapsible">10. Security</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">AWS Certificate Manager</a>
+                    <a href="./topics/10.security/AWS Certificate Manager.html" data-topic="iam">AWS Certificate Manager</a>
                     <a href="#" data-topic="aws-ad">AWS Shield</a>
                     <a href="#" data-topic="aws-organizations">Firewall Manager</a>
                     <a href="#" data-topic="cognito">GuardDuty</a>
@@ -143,7 +143,7 @@
             <div class="section">
                 <button class="collapsible">11. Storage</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">Aurora</a>
+                    <a href="./topics/11. Storage/Aurora.html" data-topic="iam">Aurora</a>
                     <a href="#" data-topic="aws-ad">DocumentDB</a>
                     <a href="#" data-topic="aws-organizations">DynamoDB</a>
                     <a href="#" data-topic="cognito">ElastiCache</a>
