--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                 <button class="collapsible">11. Storage</button>
                 <div class="content">
                     <a href="./topics/11. Storage/Aurora.html" data-topic="iam">Aurora</a>
-                    <a href="#" data-topic="aws-ad">DocumentDB</a>
-                    <a href="#" data-topic="aws-organizations">DynamoDB</a>
-                    <a href="#" data-topic="cognito">ElastiCache</a>
+                    <a href="./topics/11. Storage/DocumentDB.html" data-topic="aws-ad">DocumentDB</a>
+                    <a href="./topics/11. Storage/DynamoDB.html" data-topic="aws-organizations">DynamoDB</a>
+                    <a href="./topics/11. Storage/ElastiCache.html" data-topic="cognito">ElastiCache</a>
                     <a href="#" data-topic="connect">FSx</a>
                     <a href="#" data-topic="control-tower">RDS (Relational Database Service)</a>
                     <a href="#" data-topic="identity-center">Redshift</a>
