--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <a href="./topics/11. Storage/DocumentDB.html" data-topic="aws-ad">DocumentDB</a>
                     <a href="./topics/11. Storage/DynamoDB.html" data-topic="aws-organizations">DynamoDB</a>
                     <a href="./topics/11. Storage/ElastiCache.html" data-topic="cognito">ElastiCache</a>
-                    <a href="#" data-topic="connect">FSx</a>
+                    <a href="./topics/11. Storage/FSx.html" data-topic="connect">FSx</a>
                     <a href="#" data-topic="control-tower">RDS (Relational Database Service)</a>
                     <a href="#" data-topic="identity-center">Redshift</a>
                     <a href="#" data-topic="systems-manager">S3 (Simple Storage Service)</a>
