--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                     <a href="./topics/11. Storage/ElastiCache.html" data-topic="cognito">ElastiCache</a>
                     <a href="./topics/11. Storage/FSx.html" data-topic="connect">FSx</a>
                     <a href="./topics/11. Storage/RDS (Relational Database Service).html" data-topic="control-tower">RDS (Relational Database Service)</a>
-                    <a href="#" data-topic="identity-center">Redshift</a>
-                    <a href="#" data-topic="systems-manager">S3 (Simple Storage Service)</a>
+                    <a href="./topics/11. Storage/Redshift.html" data-topic="identity-center">Redshift</a>
+                    <a href="./topics/11. Storage/S3 (Simple Storage Service).html" data-topic="systems-manager">S3 (Simple Storage Service)</a>
                     <a href="#" data-topic="connect">S3 Glacier</a>
                     <a href="#" data-topic="connect">Storage Gateway</a>
                 </div>
