--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <a href="./topics/11. Storage/RDS (Relational Database Service).html" data-topic="control-tower">RDS (Relational Database Service)</a>
                     <a href="./topics/11. Storage/Redshift.html" data-topic="identity-center">Redshift</a>
                     <a href="./topics/11. Storage/S3 (Simple Storage Service).html" data-topic="systems-manager">S3 (Simple Storage Service)</a>
-                    <a href="#" data-topic="connect">S3 Glacier</a>
+                    <a href="./topics/11. Storage/S3 Glacier.html" data-topic="connect">S3 Glacier</a>
                     <a href="#" data-topic="connect">Storage Gateway</a>
                 </div>
             </div>
