--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <a href="./topics/11. Storage/Redshift.html" data-topic="identity-center">Redshift</a>
                     <a href="./topics/11. Storage/S3 (Simple Storage Service).html" data-topic="systems-manager">S3 (Simple Storage Service)</a>
                     <a href="./topics/11. Storage/S3 Glacier.html" data-topic="connect">S3 Glacier</a>
-                    <a href="#" data-topic="connect">Storage Gateway</a>
+                    <a href="./topics/11. Storage/Storage Gateway.html" data-topic="connect">Storage Gateway</a>
                 </div>
             </div>
         </div>
