--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                 <button class="collapsible">10. Security</button>
                 <div class="content">
                     <a href="./topics/10.security/AWS Certificate Manager.html" data-topic="iam">AWS Certificate Manager</a>
-                    <a href="#" data-topic="aws-ad">AWS Shield</a>
-                    <a href="#" data-topic="aws-organizations">Firewall Manager</a>
-                    <a href="#" data-topic="cognito">GuardDuty</a>
-                    <a href="#" data-topic="connect">HSM (Hardware Security Module)</a>
+                    <a href="./topics/10.security/AWS Shield.html" data-topic="aws-ad">AWS Shield</a>
+                    <a href="./topics/10.security/Firewall Manager.html" data-topic="aws-organizations">Firewall Manager</a>
+                    <a href="./topics/10.security/GuardDuty.html" data-topic="cognito">GuardDuty</a>
+                    <a href="./topics/10.security/HSM (Hardware Security Module.html" data-topic="connect">HSM (Hardware Security Module)</a>
                     <a href="#" data-topic="control-tower">Inspector</a>
                     <a href="#" data-topic="identity-center">AWS Key Management Service (KMS)</a>
                     <a href="#" data-topic="systems-manager">Amazon Macier</a>
