--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
                     <a href="./topics/10.security/Firewall Manager.html" data-topic="aws-organizations">Firewall Manager</a>
                     <a href="./topics/10.security/GuardDuty.html" data-topic="cognito">GuardDuty</a>
                     <a href="./topics/10.security/HSM (Hardware Security Module.html" data-topic="connect">HSM (Hardware Security Module)</a>
-                    <a href="#" data-topic="control-tower">Inspector</a>
-                    <a href="#" data-topic="identity-center">AWS Key Management Service (KMS)</a>
-                    <a href="#" data-topic="systems-manager">Amazon Macier</a>
-                    <a href="#" data-topic="cognito">Network Firewall</a>
-                    <a href="#" data-topic="cognito">Systems Manager Parameter Store</a>
-                    <a href="#" data-topic="cognito">Security Token Service (STS)</a>
-                    <a href="#" data-topic="cognito">Secrets Manager</a>
-                    <a href="#" data-topic="cognito">Security Group</a>
+                    <a href="./topics/10.security/Inspector.html" data-topic="control-tower">Inspector</a>
+                    <a href="./topics/10.security/AWS Key Management Service (KMS).html" data-topic="identity-center">AWS Key Management Service (KMS)</a>
+                    <a href="./topics/10.security/Amazon Macier.html" data-topic="systems-manager">Amazon Macier</a>
+                    <a href="./topics/10.security/Network Firewall.html" data-topic="cognito">Network Firewall</a>
+                    <a href="./topics/10.security/Systems Manager Parameter Store.html" data-topic="cognito">Systems Manager Parameter Store</a>
+                    <a href="./topics/10.security/Security Token Service (STS).html" data-topic="cognito">Security Token Service (STS)</a>
+                    <a href="./topics/10.security/Secrets Manager.html" data-topic="cognito">Secrets Manager</a>
+                    <a href="./topics/10.security/Security Group.html" data-topic="cognito">Security Group</a>
                     <a href="#" data-topic="cognito">WAF (Web Application Firewall)</a>
                 </div>
             </div>
